Changelog
=========

Here you can see the full list of changes between each release.

In Development
--------------

Version 0.85+1.2
~~~~~~~~~~~~~~~~

- Fix: Size of disk of computer
- Fix: Translation in printer SNMP tab for day, week, month and year
- Fix: PHP error in blacklist in some cases
- Fix: Right for link with plugin monitoring
- Fix: Massive actions (some has been broken)
- Fix: SQL error on printer search list when search / display FusionInventory fields 
- Fix: PHP notices on computer inventory in some cases
- Fix: Display networkInventory in task logs (monitoring)
- Fix: Display of several task using same target in task logs (monitoring)
- Fix: Update list (prepared, to do, finished...) in task logs (monitoring)
- Fix: PHP errors in task / task job preparing
- Fix: Remove otherserial in networkinventory because removed from specs
- Fix: Fix fatal error on computer inventory for networkport speed
- Fix: In default rules import, computer name import is now enable
- Fix: List of job in task when job have no name
- Fix: Network inventory with printer / networkequipment without IP

- Enhanced: Rename "delete tasks after n days" into "delete tasks logs after n days" in configuration form
- Enhanced: Add cdrom / dvd import
- Enhanced: Network equipment display ports tagged
- Enhanced: Update travis to use new infrastructure + add test coverage (dev part, but important)
- Enhanced: Optimize task logs (monitoring) rendering
- Enhanced: Upgrade js lib and optimize js/css loading
- Enhanced: Don't display inactive task in monitoring/log
- Enhanced: Add regex in action of location rules
- Enhanced: Manage entity rule with regexp and entity tag (2 different rules with regexp + action by entity tag)


Version 0.85+1.1
~~~~~~~~~~~~~~~~

- Fix: Remove + button in ingored import rules
- Fix: Remove cron checkdevices
- Fix: 'Security die. trying to load an forbidden class name' in task tab in IPrange form